kubernetes/apps/network/ingressroutes/adguard-home.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: adguard-home
  namespace: network
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`adguard.${SECRET_DOMAIN_0}`)
      kind: Rule
      middlewares:
        - name: oauth2-proxy-auth
          namespace: network
      services:
        - name: adguard-home-web
          namespace: network
          port: 3000
  tls:
    secretName: domain-0-prod-tls
