kubernetes/apps/network/ingressroutes/code-server.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: code-server
  namespace: network
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`code.${SECRET_DOMAIN_0}`)
      kind: Rule
      middlewares:
        - name: oauth2-proxy-auth
      services:
        - name: code-server
          namespace: services
          port: 8080
  tls:
    secretName: domain-0-prod-tls
