kubernetes/apps/network/ingressroutes/flux-operator.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: flux-operator
  namespace: network
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`flux.${SECRET_DOMAIN_0}`)
      kind: Rule
      middlewares:
        - name: oauth2-proxy-forwardauth
          namespace: network
      services:
        - name: flux-operator
          namespace: flux-system
          port: 9080
  tls:
    secretName: domain-0-prod-tls
