kubernetes/apps/network/ingressroutes/grafana.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: monitoring
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 3000
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
  namespace: network
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`grafana.${SECRET_DOMAIN_0}`)
      kind: Rule
      middlewares:
        - name: oauth2-proxy-auth
          namespace: network
      services:
        - name: grafana
          namespace: monitoring
          port: 80
  tls:
    secretName: domain-0-prod-tls
