kubernetes/apps/network/ingressroutes/homeassistant.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: homeassistant
  namespace: network
spec:
  ports:
    - name: http
      port: 8123
      protocol: TCP
      targetPort: 8123
---
apiVersion: v1
kind: Endpoints
metadata:
  name: homeassistant
  namespace: network
subsets:
  - addresses:
      - ip: 10.0.100.11
    ports:
      - name: http
        port: 8123
        protocol: TCP
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: homeassistant
  namespace: network
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`home.${SECRET_DOMAIN_0}`)
      kind: Rule
      services:
        - name: homeassistant
          namespace: network
          port: 8123
  tls:
    certResolver: letsencrypt
