kubernetes/apps/network/ingressroutes/longhorn.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: longhorn
  namespace: network
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`longhorn.${SECRET_DOMAIN_0}`)
      kind: Rule
      # middlewares:
      #   - name: authentik-forwardauth
      #     namespace: network
      services:
        - name: longhorn-frontend
          namespace: storage
          port: 80
  tls:
    secretName: domain-0-prod-tls
