kubernetes/apps/network/ingressroutes/nexus.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nexus
  namespace: network
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`repo.${SECRET_DOMAIN_0}`)
      kind: Rule
      services:
        - name: nexus
          namespace: services
          port: 8081
  tls:
    secretName: domain-0-prod-tls
