kubernetes/apps/network/ingressroutes/pihole.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: pihole
  namespace: network
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`pihole.${SECRET_DOMAIN_0}`)
      kind: Rule
      middlewares:
        - name: oauth2-proxy-auth
          namespace: network
      services:
        - name: pihole-web
          namespace: network
          port: 80
  tls:
    secretName: domain-0-prod-tls
