kubernetes/apps/network/ingressroutes/traefik.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-ingressroute
  namespace: network
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`traefik.${SECRET_DOMAIN_0}`)
      kind: Rule
      services:
        - name: traefik
          port: 8080
  tls: {}
