kubernetes/apps/network/ingressroutes/zigbee2mqtt.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: zigbee2mqtt
  namespace: network
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`zigbee2mqtt.${SECRET_DOMAIN_0}`)
      kind: Rule
      services:
        - name: zigbee2mqtt
          namespace: services
          port: 8080
  tls:
    secretName: domain-0-prod-tls
